[gd_scene load_steps=11 format=3 uid="uid://dyak78v8h5ysj"]

[ext_resource type="Texture2D" uid="uid://khehg367w0xh" path="res://Assets/Textures/Conversation/pin_button_placeholder.png" id="1_drgyv"]
[ext_resource type="Script" uid="uid://bxiyenjtdltqw" path="res://Scenes/PinButton.gd" id="2_s6jnu"]
[ext_resource type="Texture2D" uid="uid://ydi8oqeeme1b" path="res://Assets/Textures/Conversation/pin_tooltip.png" id="3_p3vwy"]
[ext_resource type="Texture2D" uid="uid://bvrg4coh8tj0e" path="res://Assets/Textures/Conversation/pin_delete_normal.png" id="4_kelam"]
[ext_resource type="Texture2D" uid="uid://7cjhv8dpt3ro" path="res://Assets/Textures/Conversation/pin_delete_click.png" id="5_o0yst"]
[ext_resource type="Texture2D" uid="uid://b7ifwrbujvibx" path="res://Assets/Textures/Conversation/pin_delete_hover.png" id="6_au407"]
[ext_resource type="Texture2D" uid="uid://v78ghqowdns2" path="res://Assets/Textures/Conversation/pin_use_normal.png" id="7_7ykk6"]
[ext_resource type="Texture2D" uid="uid://dm1jgm17t4110" path="res://Assets/Textures/Conversation/pin_normal_click.png" id="8_t21u5"]
[ext_resource type="Texture2D" uid="uid://tfegc6tbcpxk" path="res://Assets/Textures/Conversation/pin_normal_hover.png" id="9_rqp3m"]
[ext_resource type="FontFile" uid="uid://bpoqa1mw116n5" path="res://Assets/Fonts/AtkinsonHyperlegible-Regular.ttf" id="10_kelam"]

[node name="PinButton" type="TextureButton"]
texture_normal = ExtResource("1_drgyv")
script = ExtResource("2_s6jnu")

[node name="Tooltip" type="Sprite2D" parent="."]
visible = false
position = Vector2(183, 142)
texture = ExtResource("3_p3vwy")

[node name="DeleteButton" type="TextureButton" parent="Tooltip"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -369.5
offset_top = -32.5
offset_right = -308.5
offset_bottom = 28.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(30.5, 30.5)
texture_normal = ExtResource("4_kelam")
texture_pressed = ExtResource("5_o0yst")
texture_hover = ExtResource("6_au407")

[node name="UseButton" type="TextureButton" parent="Tooltip"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.5
offset_top = -32.5
offset_right = -68.5
offset_bottom = 28.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(30.5, 30.5)
texture_normal = ExtResource("7_7ykk6")
texture_pressed = ExtResource("8_t21u5")
texture_hover = ExtResource("9_rqp3m")

[node name="LineLabel" type="RichTextLabel" parent="Tooltip"]
offset_left = -206.0
offset_top = -42.0
offset_right = 207.0
offset_bottom = 47.0
theme_override_fonts/normal_font = ExtResource("10_kelam")
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
text = "blabla"

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="pressed" from="Tooltip/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="Tooltip/UseButton" to="." method="_on_use_button_pressed"]
